bug: fix main-image and footer overlap on home page

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -95,6 +95,7 @@ nav {
     align-items: center; 
     height: 700px; 
     width: 100%;
+    margin-bottom: 75px;
     background: url(../images/mainimage2.jpg) no-repeat center center;
     background-size: cover; 
     filter: saturate(3);
@@ -137,10 +138,10 @@ nav {
 .radiation-types div {
     width: 33%;
     display: inherit;
-    padding: 50px;
+    padding: 50px; */
     /* border: 1px solid;
     box-shadow: 5px 10px #888888; */
-}
+ } 
 
 .radiation-types div p {
     margin: 15px;
@@ -438,14 +439,6 @@ footer p {
 }
 
 /* /* media queries */
- 
-/* for nav bar
-@media screen and (max-width: 1150px) {
-    nav {
-      height: 500px;
-      width: 500px;
-    }    */
-
 /* for index.html page */
 /* for medium screens and below */
 @media screen and (max-width: 1100px) {
@@ -478,4 +471,12 @@ footer p {
     } 
     }
 
-
+/* for radiation.html */
+@media screen and (max-width: 1100px) {
+    #sun {
+     clear: both;
+    }   
+    #food {
+        clear: both;
+    }
+}
